Fixed Banner overflow issue, when not full width

--- a/source/css/scss/components/text-banner/_module.scss
+++ b/source/css/scss/components/text-banner/_module.scss
@@ -26,6 +26,8 @@
         &.spf-text-banner--gradiant {
             background: linear-gradient(to right, $uikit-colour-Primary, $spf-colour-second-Gradiant);
             color: $uikit-colour-Background;
+            width: auto;
+            display: block;
         }
         &.spf-text-banner--image {
             background-image: url('../../../../images/text-banner-image.png');
